Closed Bug 380791 Opened 17 years ago Closed 17 years ago

fix sizing of native checkboxes and radio buttons

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

Attachments

(1 file)

Right now native checkboxes and radio buttons are rendered with an inflexible and incorrect system for sizing. We should fix that.
Attached patch fix v1.0Splinter Review
Attachment #264906 - Flags: review?(stuart.morgan)
With fix v1.0 the controls render perfectly within their frames and without the extra transparent rows. Turn on DRAW_IN_FRAME_DEBUG in our native theme impl to see it.
Flags: blocking1.9+
Comment on attachment 264906 [details] [diff] [review]
fix v1.0

Cool, this looks *much* better than the old code.
Attachment #264906 - Flags: review?(stuart.morgan) → review+
Attachment #264906 - Flags: superreview?(roc)
Comment on attachment 264906 [details] [diff] [review]
fix v1.0

Can't you write
 HIRect drawFrame = inBoxRect?
Attachment #264906 - Flags: superreview?(roc) → superreview+
landed on trunk
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: