fix sizing of native checkboxes and radio buttons. be more flexible as well. b=380791 r=cbarrett sr=roc